--- a/html/shops.html
+++ b/html/shops.html
@@ -451,143 +451,185 @@
         <main>
             <h2 class="st-heading">welcome to the fwrd shops</h2>
             <div class="st-cardContainer">
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_vacationshop.jpg" alt="">
-                    <h4>the vacation shop</h4>
-                    <p>Retreat to somewhere bright & warm with our resort-ready edit of dresses, swimwear, bags + more.</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_thecottonshop.jpg" alt="">
-                    <h4>the cotton shop</h4>
-                    <p>This season, enjoy life's everyday moments in cotton, the fabric we know, love, and live in.</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_kj.jpg" alt="">
-                    <h4>Kendall Jenner, Creative Director FWRD</h4>
-                    <p>Shop the latest must-have picks from Kendall's edit &
-                        explore our latest campaigns + more.</p>
-                    <p>shop now</p>
-                </div>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_vacationshop.jpg" alt="">
+                        <h4>the vacation shop</h4>
+                        <p>Retreat to somewhere bright & warm with our resort-ready edit of dresses, swimwear, bags + more.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_thecottonshop.jpg" alt="">
+                        <h4>the cotton shop</h4>
+                        <p>This season, enjoy life's everyday moments in cotton, the fabric we know, love, and live in.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_kj.jpg" alt="">
+                        <h4>Kendall Jenner, Creative Director FWRD</h4>
+                        <p>Shop the latest must-have picks from Kendall's edit &
+                            explore our latest campaigns + more.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
 
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_occassionshop.jpg" alt="">
-                    <h4>The Occasion Shop</h4>
-                    <p>Formal event on your radar? We've got all your options, from timeless to statement-making.</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_welcometospring.jpg" alt="">
-                    <h4>Welcome to Spring '24</h4>
-                    <p>Get ahead of the curve with the standout colors & trends to wear for the new season</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_springboho.jpg" alt="">
-                    <h4>Spring Boho</h4>
-                    <p>Fall in love with the most desirable pieces that remix high- femme & boho</p>
-                    <p>shop now</p>
-                </div>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_occassionshop.jpg" alt="">
+                        <h4>The Occasion Shop</h4>
+                        <p>Formal event on your radar? We've got all your options, from timeless to statement-making.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_welcometospring.jpg" alt="">
+                        <h4>Welcome to Spring '24</h4>
+                        <p>Get ahead of the curve with the standout colors & trends to wear for the new season</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_springboho.jpg" alt="">
+                        <h4>Spring Boho</h4>
+                        <p>Fall in love with the most desirable pieces that remix high- femme & boho</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
 
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_matchingsets.jpg" alt="">
-                    <h4>Matching Sets</h4>
-                    <p>From satin stunners to jersey draped elegance, discover the matching sets designed to make your life easier.</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_swimshop.jpg" alt="">
-                    <h4>The Swim Shop</h4>
-                    <p>As high temperatures start to take off, it's time to strategize your new-season of swimwear.</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_rsvp.jpg" alt="">
-                    <h4>RSVP In Style</h4>
-                    <p>The party doesn't stop here-discover all the stunning event dresses ready for your debut</p>
-                    <p>shop now</p>
-                </div>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_matchingsets.jpg" alt="">
+                        <h4>Matching Sets</h4>
+                        <p>From satin stunners to jersey draped elegance, discover the matching sets designed to make your life easier.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_swimshop.jpg" alt="">
+                        <h4>The Swim Shop</h4>
+                        <p>As high temperatures start to take off, it's time to strategize your new-season of swimwear.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_rsvp.jpg" alt="">
+                        <h4>RSVP In Style</h4>
+                        <p>The party doesn't stop here-discover all the stunning event dresses ready for your debut</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
                 
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_everydayfashion.jpg" alt="">
-                    <h4>Everyday Fashion Formulas</h4>
-                    <p>Flowing with styling opportunities & wear-and-go versatility, these quiet staples will set the new standard of everyday dressing</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_renew.jpg" alt="">
-                    <h4>FWRD Renew</h4>
-                    <p>From one-of-a-kind treasures to the latest in current trends, discover our collection of pre-loved items sourced right to you.</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_preciouscargo.jpg" alt="">
-                    <h4>Precious Cargo</h4>
-                    <p>Spotted on everything from trousers to bags, we're celebrating the official return of the cargo trend.</p>
-                    <p>shop now</p>
-                </div>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_everydayfashion.jpg" alt="">
+                        <h4>Everyday Fashion Formulas</h4>
+                        <p>Flowing with styling opportunities & wear-and-go versatility, these quiet staples will set the new standard of everyday dressing</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_renew.jpg" alt="">
+                        <h4>FWRD Renew</h4>
+                        <p>From one-of-a-kind treasures to the latest in current trends, discover our collection of pre-loved items sourced right to you.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_preciouscargo.jpg" alt="">
+                        <h4>Precious Cargo</h4>
+                        <p>Spotted on everything from trousers to bags, we're celebrating the official return of the cargo trend.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
 
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_beauty.jpg" alt="">
-                    <h4>FWRD Beauty</h4>
-                    <p>From skincare, hair care + more, your best beauty moment
-                        starts here</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_EP.jpg" alt="">
-                    <h4>Editors' Picks</h4>
-                    <p>Our editors share their favorite new looks of the season</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_home.jpg" alt="">
-                    <h4>Step Inside</h4>
-                    <p>Give your space that five-star feel with our latest arrivals in home décor</p>
-                    <p>shop now</p>
-                </div>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_beauty.jpg" alt="">
+                        <h4>FWRD Beauty</h4>
+                        <p>From skincare, hair care + more, your best beauty moment
+                            starts here</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_EP.jpg" alt="">
+                        <h4>Editors' Picks</h4>
+                        <p>Our editors share their favorite new looks of the season</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_home.jpg" alt="">
+                        <h4>Step Inside</h4>
+                        <p>Give your space that five-star feel with our latest arrivals in home décor</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
             </div>
 
             <h2 class="st-heading">trends</h2>
             <div class="st-cardContainer">
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_isabelmarant.jpg" alt="">
-                    <h4>Isabel Marant</h4>
-                    <p>The Spring/Summer '24 Collection</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_eclecticromance.jpg" alt="">
-                    <h4>Eclectic Romance</h4>
-                    <p>Fall in love with the most desirable pieces that remix high- femme & boho-a dynamic wardrobe spotlighting ethereal energy.</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_kj.jpg" alt="">
-                    <h4>Spring Suiting</h4>
-                    <p>This season's updates are seen in softer fabrics and more relaxed tailoring.</p>
-                    <p>shop now</p>
-                </div>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_isabelmarant.jpg" alt="">
+                        <h4>Isabel Marant</h4>
+                        <p>The Spring/Summer '24 Collection</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_eclecticromance.jpg" alt="">
+                        <h4>Eclectic Romance</h4>
+                        <p>Fall in love with the most desirable pieces that remix high- femme & boho-a dynamic wardrobe spotlighting ethereal energy.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_kj.jpg" alt="">
+                        <h4>Spring Suiting</h4>
+                        <p>This season's updates are seen in softer fabrics and more relaxed tailoring.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
 
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_topitoff.jpg" alt="">
-                    <h4>TTop It Off</h4>
-                    <p>Start your new wardrobe selections with our rundown of the most trend-setting tops for spring.</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_closetstaples.jpg" alt="">
-                    <h4>The Closet Staples to Buy Now</h4>
-                    <p>We're championing the classics and diving into our curation of the top closet updates to reinvent your spring wardrobe</p>
-                    <p>shop now</p>
-                </div>
-                <div>
-                    <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_frenchgirlstyle.jpg" alt="">
-                    <h4>French Girl Style</h4>
-                    <p>Embody that enviable Parisian philosophy with these quintessential French girl-approved closet must-haves</p>
-                    <p>shop now</p>
-                </div>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_topitoff.jpg" alt="">
+                        <h4>TTop It Off</h4>
+                        <p>Start your new wardrobe selections with our rundown of the most trend-setting tops for spring.</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_closetstaples.jpg" alt="">
+                        <h4>The Closet Staples to Buy Now</h4>
+                        <p>We're championing the classics and diving into our curation of the top closet updates to reinvent your spring wardrobe</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div>
+                        <img src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_frenchgirlstyle.jpg" alt="">
+                        <h4>French Girl Style</h4>
+                        <p>Embody that enviable Parisian philosophy with these quintessential French girl-approved closet must-haves</p>
+                        <p>shop now</p>
+                    </div>
+                </a>
             </div>
         </main>
 
